--- a/app/content/service/code-libraries.yml
+++ b/app/content/service/code-libraries.yml
@@ -1,5 +1,6 @@
 Code libraries:
   Languages your code libraries are written in:
+    dependsOnLots: SaaS
     fields:
       - type: list
         addthing: Add another code library
