--- a/app/content/service/onboarding-and-offboarding.yml
+++ b/app/content/service/onboarding-and-offboarding.yml
@@ -1,14 +1,15 @@
 Onboarding and offboarding:
   Onboarding process included:
+    dependsOnLots: SaaS, PaaS, IaaS
     fields:
       - type: boolean
         validation: notBlank
         errorMessage: ""
         errorSummaryMessage: ""
   Offboarding process included:
+    dependsOnLots: SaaS, PaaS, IaaS
     fields:
       - type: boolean
         validation: notBlank
         errorMessage: ""
         errorSummaryMessage: ""
-
