--- a/app/content/service/open-standards.yml
+++ b/app/content/service/open-standards.yml
@@ -1,5 +1,6 @@
 Open standards:
   Open standards supported and documented:
+    dependsOnLots: SaaS, PaaS, IaaS
     fields:
       - type: boolean
         validation: notBlank
