--- a/app/content/service/service-description.yml
+++ b/app/content/service/service-description.yml
@@ -2,6 +2,7 @@ Service description:
   Service name:
     hint: "Include your product name only. Using additional keywords may impact your acceptance on to the Digital Marketplace."
     mockAnswer: Umbraco CMS
+    dependsOnLots: SaaS, PaaS, IaaS, SCS
     fields:
       - type: text
         validation: notBlank
@@ -10,6 +11,7 @@ Service description:
   Service summary:
     hint: "Please provide a short description of your service. (50 words maximum). Company information should not be included here. You can provide a company description for your supplier page elsewhere."
     mockAnswer: "Professional website development to enhance the delivery and performance of online services based on Sitecore or Umbraco Content Management Systems. We provide development and support services for large scale, business critical websites for many organisations including NHS Direct, Department for Education and the Department for Business, Innovation and Skills."
+    dependsOnLots: SaaS, PaaS, IaaS, SCS
     fields:
       - type: textarea
         validation: notBlank
