--- a/app/content/service/analytics.yml
+++ b/app/content/service/analytics.yml
@@ -1,5 +1,6 @@
 Analytics:
   Real-time management information available:
+    dependsOnLots: SaaS, PaaS, IaaS
     fields:
       - type: boolean
         validation: notBlank
