--- a/app/content/service/data-storage.yml
+++ b/app/content/service/data-storage.yml
@@ -1,11 +1,13 @@
 Data storage:
   Datacentres adhere to EU Code of Conduct for Operations:
+    dependsOnLots: SaaS, PaaS, IaaS
     fields:
       - type: boolean
         validation: notBlank
         errorMessage: ""
         errorSummaryMessage: ""
   User-defined data location:
+    dependsOnLots: SaaS, PaaS, IaaS
     fields:
       - type: boolean
         validation: notBlank
@@ -14,6 +16,7 @@ Data storage:
   Data processing and storage location(s):
     hint: Choose all that apply
     mockAnswer: United Kingdom
+    dependsOnLots: SaaS, PaaS, IaaS
     fields:
       - type: checkbox
         label: United Kingdom
@@ -27,6 +30,7 @@ Data storage:
         errorSummaryMessage: ""
   Datacentre tier:
     hint: Choose one
+    dependsOnLots: SaaS, PaaS, IaaS
     fields:
       - type: radio
         label: TIA-942 Tier 1
@@ -69,12 +73,14 @@ Data storage:
         errorMessage: ""
         errorSummaryMessage: ""
   Backup and disaster recovery in place:
+    dependsOnLots: SaaS, PaaS, IaaS
     fields:
       - type: boolean
         validation: notBlank
         errorMessage: ""
         errorSummaryMessage: ""
   Data extraction/removal plan in place:
+    dependsOnLots: SaaS, PaaS, IaaS
     fields:
       - type: boolean
         validation: notBlank
