--- a/app/content/service/features-and-benefits.yml
+++ b/app/content/service/features-and-benefits.yml
@@ -2,6 +2,7 @@ Features and benefits:
   Service features:
     hint: "Include the technical features of your product, eg graphical workflow, remote access. (Maximum 10 words per feature. Maximum 10 features.)"
     mockAnswer: "Graphical workflow, Remote access, Revision control"
+    dependsOnLots: SaaS, PaaS, IaaS, SCS
     fields:
       - type: list
         validation: notBlank
@@ -11,6 +12,7 @@ Features and benefits:
   Service benefits:
     hint: "Include benefits that show how your service helps users improve their business. Use active phrases, eg publish content from multiple devices, quickly manage content on the move.  (Maximum 10 words per benefit. Maximum 10 benefits.)"
     mockAnswer: "Publish content, Quickly manage content on the move"
+    dependsOnLots: SaaS, PaaS, IaaS, SCS
     fields:
       - type: list
         validation: notBlank
