--- a/app/content/service.yml
+++ b/app/content/service.yml
@@ -1,9 +1,15 @@
 - Page 1:
     name: Service type
     file: service/service-details.yml
-- Page 2:
+- Page 2a:
     name: Service type
-    file: service/service-type.yml
+    file: service/service-type-IaaS.yml
+- Page 2b:
+    name: Service type
+    file: service/service-type-SaaS.yml
+- Page 2c:
+    name: Service type
+    file: service/service-type-SCS.yml
 - Page 3:
     name: Service description
     file: service/service-description.yml
